--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/dennismacc/README-Generator/issues"
   },
-  "homepage": "https://github.com/dennismacc/README-Generator#readme"
+  "homepage": "https://github.com/dennismacc/README-Generator#readme",
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "inquirer": "^8.2.4"
+  }
 }
